<resources>
    <string name="app_name">7MinutesWorkout</string>
    <string name="start_button_text">START</string>
    <string name="start_image_description">Start image</string>
    <string name="get_ready_text">GET READY FOR</string>
    <string name="exercise_image">Exercise image</string>
    <string name="upcoming_exercise">Upcoming exercise:\n%s</string>
    <string name="exercises_are_over">EXERCISES ARE OVER</string>
    <string name="end_text">END</string>
    <string name="congratulations_text">Congratulations!</string>
    <string name="congratulation_2_text">You have done the workout!</string>
    <string name="finish_button_text">FINISH</string>
    <string name="tick_image">Tick image</string>
    <string name="dialog_title">Are you sure?</string>
    <string name="dialog_text">This will stop your workout. You\'ve come this far, are you sure you want to quit?</string>
    <string name="yes_button_text">YES</string>
    <string name="no_button_text">NO</string>
    <string name="bmi_text">BMI</string>
    <string name="weight_hint">WEIGHT (in kg)</string>
    <string name="height_hint">HEIGHT (in cm)</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="calculate_button_text">CALCULATE</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="us_units">US UNITS</string>
    <string name="feet">Feet</string>
    <string name="inch">Inch</string>
    <string name="history_image_description">History image</string>
    <string name="position">%d</string>
    <string name="exercise_completed_title">EXERCISE COMPLETED</string>
    <string name="no_data_available_text">NO DATA AVAILABLE</string>
</resources>