<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/start_image_description"
            android:src="@drawable/img_main_page"
            android:layout_marginHorizontal="5dp"/>

        <FrameLayout
            android:id="@+id/startFl"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/item_color_accent_border_ripple_background">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_button_text"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp"
                android:textStyle="bold"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/bmiFl"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/item_circular_color_accent_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bmi_text"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold"/>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/historyFl"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="40dp"
                android:layout_marginStart="50dp"
                android:background="@drawable/item_circular_color_accent_background">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/history_image_description"
                    android:src="@drawable/ic_calendar"
                    android:layout_gravity="center"
                    android:padding="10dp"/>

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>