<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExerciseActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/exerciseToolbar"
        android:theme="@style/ToolbarTheme"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white"
        app:titleTextColor="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/exerciseIv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/exercise_image"
        android:src="@drawable/ic_jumping_jacks"
        android:visibility="invisible"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/exerciseToolbar"
        app:layout_constraintBottom_toTopOf="@id/titleTv"/>

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_ready_text"
        android:textSize="22sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/progressBarFl"/>
    
    <FrameLayout
        android:id="@+id/progressBarFl"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/item_circular_color_accent_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exerciseToolbar">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:background="@drawable/circular_progress_gray"
            android:layout_gravity="center"
            android:indeterminate="false"
            android:max="10"
            android:progress="100"
            android:rotation="-90"/>
        
        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/item_circular_color_accent_background"
            android:gravity="center">

            <TextView
                android:id="@+id/timerTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="25sp"
                tools:text="10"/>

        </LinearLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/upcomingExerciseTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upcoming_exercise"
        android:textSize="22sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressBarFl"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/exerciseStatusRv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/upcomingExerciseTv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>